2018-09-02 David Anderson
    * Makefile.am: Changed the way to build tag_tree and tag_attr
      executables to the automake way, eliminating make warnings
      when building.
    * Makefile.in: regenerated.
2018-08-23 David Anderson
    * CMakeLists.txt: Adjusted to fit new/changed file names.
2018-08-21 David Anderson
    * Makefile.am: Now honors --enable-wall
    * print_die.c,print_ranges.c,print_strings.c: Removed
      unused variables.
    * print_dnames.c: Removed unused variables and fixed the section-name
      print (.debug_str-> .debug_names).
2018-08-14 David Anderson
    * Makefile.am: CPPFLAGS_FOR_BUILD a few places it
      was accidentally omitted.
2018-08-09 David Anderson
    * Makefile.am: Added AM_TESTS_ENVIRONMENT enabling
      make check from any build directory. Also,add
      getopttest.c and testesb.c to the files in a release
      so make check can work
    * runtests.sh: Handle the environment variable
      AM_TESTS_ENVIRONMENT sets: DWTOPSRCDIR
2018-08-08 David Anderson
    * Makefile.am: corrected dwarfdump_DATA 
      reference to be dwarfdumpdev_DATA
2018-08-07 David Anderson
    * dwconf.c: Removed trailing whitespace.
    * globals.h: Added DWARF_SECNAME_BUFFER_SIZE define
      (space for a small string) so if it need change
      there is just one place to change it. Used in many
      files with esb_constructor_fixed()..
    * print_abbrevs.c,print_die.c,print_locs.c,print_strings.c: 
      Refactored the section name printing
      into a function and call after calling libdwarf
      so the interesting section compression info
      is available to print.
    * print_aranges.c,print_pubnames.c, print_ranges.c,
      print_static_funcs.c,print_static_vars.c,print_weaknames.c: 
      Moved a libdwarf call above the
      section name print
      so the interesting section compression info
      is available to print.
    * print_dnames.c,print_frames.c: Removed trailing whitespace, use
      DWARF_SECNAME_BUFFER_SIZE.