@@ -56,6 +56,8 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #endif
 #include "stdlib.h" /* for free() */
 #include <stdio.h> /* for printf */
+#include <inttypes.h> /* for PRIxPTR macros */
+
 #include "dwarf_tsearch.h"
 
 
@@ -125,12 +127,15 @@ dumptree_inner(const struct ts_entry *t,
         v = keyprint(t->keyptr);
     }
     printlevel(level);
-    printf("0x%08x <keyptr 0x%08x> <%s %s> <l 0x%08x> <r 0x%08x> %s\n",
-        (unsigned)t,
-        (unsigned)t->keyptr,
+    printf("0x%08" PRIxPTR " <keyptr 0x%08" PRIxPTR "> "
+           "<%s %s> "
+           "<l 0x%08" PRIxPTR "> <r 0x%08" PRIxPTR "> "
+           "%s\n",
+        (uintptr_t)t,
+        (uintptr_t)t->keyptr,
         t->keyptr?"key ":"null",
         v,
-        (unsigned)t->llink,(unsigned)t->rlink,
+        (uintptr_t)t->llink,(uintptr_t)t->rlink,
         descr);
     dumptree_inner(t->llink,keyprint,"right",level+1);
 }
@@ -162,8 +167,8 @@ dwarf_tdump(const void*rootin,
         printf("dwarf_tdump empty tree : %s\n",msg);
         return;
     }
-    printf("dwarf_tdump tree head : 0x%08lx %s\n",(unsigned long)head,msg);
-    printf("dwarf_tdump tree root : 0x%08lx %s\n",(unsigned long)root,msg);
+    printf("dwarf_tdump tree head : 0x%08" PRIxPTR " %s\n",(uintptr_t)head,msg);
+    printf("dwarf_tdump tree root : 0x%08" PRIxPTR " %s\n",(uintptr_t)root,msg);
     dumptree_inner(root,keyprint,"top",0);
 }
 
